@@ -183,6 +183,8 @@ function mb_ord(string $string, ?string $encoding = null): int|false {}
 
 function mb_chr(int $codepoint, ?string $encoding = null): string|false {}
 
+function mb_str_pad(string $string, int $length, string $pad_string = " ", int $pad_type = STR_PAD_RIGHT, ?string $encoding = null): string {}
+
 #ifdef HAVE_MBREGEX
 /** @refcount 1 */
 function mb_regex_encoding(?string $encoding = null): string|bool {}
