@@ -2,6 +2,8 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? ????, PHP 8.3.0alpha3
 
+- MBString:
+  . Implement mb_str_pad() RFC. (nielsdos)
 
 22 Jun 2023, PHP 8.3.0alpha2
 
